Added a prescription for appendix stuff.

--- a/my-report.sty
+++ b/my-report.sty
@@ -136,3 +136,16 @@
 	citecolor=RoyalBlue,
 }
 % more options on https://www.overleaf.com/learn/latex/hyperlinks
+
+
+%%% Appendix material 
+% Add when defining appendix
+% \newpage -- puts you on a new page
+% \appendix -- starts appendix
+% Change titling of appendix sections:
+% \renewcommand\thesection{Appendix \Alph{section}}
+% Change the counter to reflect that fig/table from appendix:
+% \renewcommand{\thetable}{\Alph{section}\arabic{table}}
+% \setcounter{table}{0}
+% \renewcommand{\thefigure}{\Alph{section}\arabic{figure}}
+% \setcounter{figure}{0}
