Added conclusion chapter.

--- a/SS16-shil5377-LyubomirShoylev.tex
+++ b/SS16-shil5377-LyubomirShoylev.tex
@@ -17,11 +17,11 @@
 \maketitle
 
 \begin{abstract}
-    In this experiment, we study the X-ray emission lines production and verify Moseley's Law by measuring the energy of emission lines series in several metals. Then, we use spectroscopy to report on the composition of different samples: two semiconductors, several unlabelled alloys and international metal coins provided in the laboratory. We give results for the mass ratios of the unlabelled alloys. We also find that most coins are either Ni-Cu or Cu-Zn alloys and expand on the reasons behind this choice.
+    In this experiment, we study the X-ray emission lines production and verify Moseley's Law by measuring the energy of emission lines series in several metals. Then, we use spectroscopy to report on the composition of different samples: two semiconductors, several unlabelled alloys and international metal coins provided in the laboratory. We give results for the mass ratios of the unlabelled alloys. We also find that most coins are made up of either Ni-Cu or Cu-Zn alloys and expand on the reasons behind this choice.
 \end{abstract}
 
 \section{Introduction}
-X-rays are an important experimental tool and have been for more than a 100 years now ever since their discovery by the Nobel Prize winning experiment by Wilhelm R\"{o}ntgen. They are currently employed in scattering setups by both by scientists in their study of materials as well as medicine in scanning apparatus. In this experiment, we first study the theoretical basis of X-ray production first developed by Moseley. We measure the energy of the \Kalpha and \Lalpha emission lines series of several samples of known elements with known atomic number $Z$ to verify Moseley's Law. Having established the uniqueness of X-ray emission lines for a given $Z$, we use it to study the composition of several samples provided to us in the laboratory by measuring their emission spectra when exposed to a continuous X-ray source. We begin by independently confirming the composition of two semiconductor samples observed in the non-mini-project part of the experiment. Then, we report on the composition of some unlabelled metal alloys and the relative mass ratios of the samples. Finally, we report on the composition of an array of international coins provided in the laboratory and expand more on the reasoning for the mainly Ni-Cu-Zn composition.
+X-rays are an important experimental tool and have been for more than a 100 years now ever since their discovery by Wilhelm R\"{o}ntgen. They are currently employed by both scientists, from scattering experiments in condensed matter to high-energy astrophysics, and citizens for medical scans etc. In this experiment, we first study the theoretical basis of X-ray production first developed by Moseley. We measure the energy of the \Kalpha and \Lalpha emission lines series of several samples of known elements with known atomic number $Z$ to verify Moseley's Law. Having established the uniqueness of X-ray emission lines for a given $Z$, we use it to study the composition of several samples provided to us in the laboratory by measuring their emission spectra when exposed to a continuous X-ray source. We begin by independently confirming the composition of two semiconductor samples observed in the non-mini-project part of the experiment. Then, we report on the composition of some unlabelled metal alloys and the relative mass ratios of the samples. Finally, we report on the composition of an array of international coins provided in the laboratory and expand more on the reasoning for the mainly Ni-Cu-Zn composition.
 
 \section{Theory}
 We begin by introducing some of the background theory behind X-rays and their production.
@@ -50,7 +50,7 @@ The name convention of the energy levels of low-$n$ in X-ray notation is describ
     L2 ($2\mathrm{p}_{1/2}$)                  & M4 ($3\mathrm{d}_{3/2}$) & $\mathrm{L}_{\beta 1}$  & L2-M4 \\
     M5 ($3\mathrm{d}_{5/2}$)                  & N7 ($4\mathrm{f}_{7/2}$) & $\mathrm{M}_{\alpha 1}$ & M5-N7 \\ \bottomrule
     \end{tabular}
-    \caption{Table of the connection between Siegbahn and IUPAC notation. IUPAC levels are listed with atomic notation as well. Source: \cite{Jenkins1991}.}
+    \caption{Table of the connection between Siegbahn and IUPAC notation. Energy levels in IUPAC are listed with atomic notation as well. Source: \cite{Jenkins1991}.}
     \label{tab:siegbahn-notation}
 \end{table}
 
@@ -63,7 +63,7 @@ In practice, we produce X-rays by bombarding a sample of some material with high
     \caption{Schematic of the emission process for a K-L3 transition.}\label{fig:emission-diagram}
 \end{figure}
 
-Usually, small laboratory X-ray tubes use an electron source. Because of that, we observe a continuum of X-ray radiation imposed on top of the emission lines. This radiation is called \emph{bremsstrahlung} (``braking") radiation. Its source is the interaction between decelerating electrons and stationary charges in the sample lattice. The maximal energy of a bremsstrahlung continuum is limited by the energy of the decelerating particle. If electrons accelerated by a potential difference $V$, then the maximal energy is given by: 
+Usually, small laboratory X-ray tubes use an electron source. Because of that, we observe a continuum of X-ray radiation imposed on top of the emission lines. This radiation is called \emph{bremsstrahlung} (``braking") radiation. Its source is the interaction between decelerating electrons and stationary charges in the sample lattice. The maximal energy of a bremsstrahlung continuum is limited by the energy of the decelerating particle. If these are electrons accelerated by a potential difference $V$, then the maximal energy is given by: 
 \begin{equation}\label{eqn:bremss-energy-max}
     \varepsilon_\mathrm{max} = eV.
 \end{equation}
@@ -72,10 +72,10 @@ Suppose we use one such continuous X-ray source for the production of X-rays for
 \begin{equation}\label{eqn:Kalpha-energy-out}
     \varepsilon_\mathrm{out} = \rydberg\left(Z\right) \left(1 - \frac{1}{2^2}\right).
 \end{equation}
-A process like this one, in which $\varepsilon_\mathrm{in} \neq \varepsilon_\mathrm{out}$, is called \emph{flourescence}.
+A process like this one, in which $\varepsilon_\mathrm{in} \neq \varepsilon_\mathrm{out}$, is called \emph{fluorescence}.
 
 \subsection{Composition analysis}\label{subsec:compos-analysis}
-As said above, the X-ray emission is relatively independent of the composition of the sample. We can use this fact to perform a composition analysis on a sample by exposing it to the continuous bremsstrahlung of a source; this will allow the different components to fluoresce. The signal will give us information not only \emph{which} elements are present (given that the source is high enough to allow fluorescence), but their relative contribution --- the intensity of the signal will depend only on the number density $n$. Suppose we measure the intensity of a two-metal alloy with the peaks in the K-L3 line as $I_\mathrm{a}$ and $I_\mathrm{b}$.
+As said above, the X-ray emission is relatively independent of the composition of the sample. We can use this fact to perform a composition analysis on a sample by exposing it to the continuous bremsstrahlung of a source; this will allow the different components to fluoresce. The signal will give us information not only \emph{which} elements are present (given that the source is high enough to allow fluorescence), but their relative contribution --- the intensity of the signal will depend only on the number density $n$. Suppose we measure the intensity of a two-metal alloy with the peaks in the \Kalpha line as $I_\mathrm{a}$ and $I_\mathrm{b}$.
 This tells us that:
 \begin{equation}
     \frac{I_\mathrm{a}}{I_\mathrm{b}} = \frac{n_\mathrm{a}}{n_\mathrm{b}},
@@ -91,7 +91,7 @@ Our experiment consists of the setup presented in Figure \ref{fig:experim-setup}
     \caption{Diagram of the experimental setup. More info in the text of Section \ref{sec:experiment}.}\label{fig:experim-setup}
 \end{figure}
 
-To operate the apparatus and extract data, we use the software provided by the labs \emph{CASSY Lab 2}. The program has a built in database for the X-ray emission lines of most elements. It also allows for calculating a peak centre and fitting gaussian profiles with specified energy to find the intensity of emission lines.
+To operate the apparatus and extract data, we use the software provided by the labs \emph{CASSY Lab 2}. The program has a built in database for the X-ray emission lines of most elements. It also allows for calculating a peak centre and fitting gaussian profiles with specified energy to find the intensity of emission lines. (\reminder{expand on applicability since x-ray lines are asymmetrical.})
 
 Before we can do any work that has to do with determining energies or referring to energy values from a database, need to set the scaling of the measurement apparatus. We will do so with two of the labelled provided samples - for Fe and Ag. These cover a wide range of values in the bremsstrahlung spectrum, so they are a good way to set the scaling. The particular lines which we use to calibrate are the Fe \Kalpha with $E_\mathrm{Fe} = \qty{6.40}{keV}$ and the Ag \Kalpha with $E_\mathrm{Ag} = \qty{22.17}{keV}$. We also have to note the observational lower and upper limits, respectively \qtyrange{2}{4}{keV} and $\approx \qty{35}{keV}$.
 
@@ -268,7 +268,11 @@ Finally, these alloys are very practical for everyday use. Coins, in their daily
 \reminder{This is a potential direction to investigate. Main idea --- calculate the ``value'' of a coin via its weight+official composition to see if anything interesting appears (coins worth more than their value, similar value for all coins etc.)}
 
 \section{Conclusions}
-\lipsum[1-5]
+In this experiment, we first study the theoretical basis of X-ray production first developed by Moseley. We measure the energy of the \Kalpha and \Lalpha emission lines series of several samples of known elements with known atomic number $Z=\numrange{22}{40} \mathrm{and} \numrange{50}{82}$ respectively. We find that there exists a linear relationship between the square root of the energy and number $Z$ like predicted by Moseley's law. Having established the uniqueness of X-ray emission lines for a given $Z$, we use it to study the composition of several samples provided to us in the laboratory by measuring their emission spectra when exposed to the continuous X-ray source. For the semiconductors, we observe traces of In in sample X2 and traces of In and Sb, which confirms the independently derived results form the non-mini-project. We also note the observational limitations of our setup, since the dopant of X2 was not observed --- P has a \Kalpha of energy below the observational limit.
+
+Then, we report on the composition of some unlabelled metal alloys and the relative mass ratios of the samples. We measure these by performing gaussian fits using the built-in capabilities of the acquisition software. We also go through some analysis to confirm our observations are self-consistent by comparing the ratios of \Kalpha/\Kbeta for the same elements in different samples.
+
+Finally, we report on the composition of an array of international coins provided in the laboratory. We discover that most have signs of Ni,Cu, and Zn in their spectra predominantly. While it is difficult to exactly extract intensities of the lines since they overlap, we report on the presence of either element in the coins in addition to any other element seen in the spectra. We discuss some seemingly anomalous results, like the 1 Yen and 25c canadian coins, which turn out to be 100\% aluminium and Ni-Cu clad steel. We conclude with an explanation for the frequency of use of these three metals, as well as the need to produce steel-core coins.
 
 \bibliographystyle{agsm}
 % \renewcommand{\bibname}{#new-name} -- rename the title of bibliography chapter
