Quick fix of header titling.

--- a/SS16-shil5377-LyubomirShoylev.tex
+++ b/SS16-shil5377-LyubomirShoylev.tex
@@ -285,6 +285,7 @@ Finally, we report on the composition of an array of international coins provide
 \setcounter{table}{0}
 \renewcommand{\thefigure}{\Alph{section}\arabic{figure}}
 \setcounter{figure}{0}
+\renewcommand{\sectionmark}[1]{\markboth{\thesection.\ #1}{}}
 
 \section{Energy spectra plots}
 \begin{figure}[!htbp]
