--- a/my-report.sty
+++ b/my-report.sty
@@ -144,6 +144,8 @@
 % \appendix -- starts appendix
 % Change titling of appendix sections:
 % \renewcommand\thesection{Appendix \Alph{section}}
+% Change header titling
+% \renewcommand{\sectionmark}[1]{\markboth{\thesection.\ #1}{}}
 % Change the counter to reflect that fig/table from appendix:
 % \renewcommand{\thetable}{\Alph{section}\arabic{table}}
 % \setcounter{table}{0}
