Fixed bibliography style to numer cite per Claire request.

--- a/SS16-shil5377-LyubomirShoylev.tex
+++ b/SS16-shil5377-LyubomirShoylev.tex
@@ -274,7 +274,7 @@ Then, we report on the composition of some unlabelled metal alloys and the relat
 
 Finally, we report on the composition of an array of international coins provided in the laboratory. We discover that most have signs of Ni,Cu, and Zn in their spectra predominantly. While it is difficult to exactly extract intensities of the lines since they overlap, we report on the presence of either element in the coins in addition to any other element seen in the spectra. We discuss some seemingly anomalous results, like the 1 Yen and 25c canadian coins, which turn out to be 100\% aluminium and Ni-Cu clad steel. We conclude with an explanation for the frequency of use of these three metals, as well as the need to produce steel-core coins.
 
-\bibliographystyle{agsm}
+\bibliographystyle{plain}
 % \renewcommand{\bibname}{#new-name} -- rename the title of bibliography chapter
 \bibliography{references.bib}
 
