--- a/references.bib
+++ b/references.bib
@@ -5,7 +5,7 @@
   journal   = {Pure and Applied Chemistry},
   title     = {Nomenclature, symbols, units and their usage in spectrochemical analysis - {VIII}. Nomenclature system for X-ray spectroscopy (Recommendations 1991)},
   year      = {1991},
-  month     = {jan},
+  month     = jan,
   number    = {5},
   pages     = {735--746},
   volume    = {63},
@@ -14,7 +14,7 @@
 }
 
 @Manual{OxfPhys2010,
-  title        = {X-ray diffraction},
+  title        = {SS16: X-ray diffraction},
   author       = {{Oxford Physics}},
   month        = oct,
   organization = {Oxford Physics},
