--- a/my-report.sty
+++ b/my-report.sty
@@ -113,15 +113,17 @@
 %\usepackage{bibtex}	% old tech, still good for basic bibs
 % Natbib - easiest to combine with JabRef for bibliography management.
 \usepackage[square,sort,comma,numbers]{natbib}
-\setcitestyle{authoryear,open={(},close={)}}
-\let\OLDthebibliography\thebibliography
-\renewcommand\thebibliography[1]{
-  \OLDthebibliography{#1}
-  \setlength{\parskip}{3pt}
-  \setlength{\itemsep}{0pt plus 0.3ex}
-}
+% -- Extra jazz, if you want to customize beyond available options in the package
+% \setcitestyle{authoryear,open={(},close={)}}
+% \let\OLDthebibliography\thebibliography
+% \renewcommand\thebibliography[1]{
+%   \OLDthebibliography{#1}
+%   \setlength{\parskip}{3pt}
+%   \setlength{\itemsep}{0pt plus 0.3ex}
+% }
+% --
 % To include in text, use
-% \bibliographystyle{agsm} -- preferred view of bibs
+% \bibliographystyle{plain} -- preferred view of bibs, has to be included in the main .tex file and not in the custom package file
 % \renewcommand{\bibname}{#new-name} -- rename the title of bibliography chapter
 % \bibliography{#name-of-bib} -- command to include in compiled file
 
