Added citation for the lab software.

--- a/SS16-shil5377-LyubomirShoylev.tex
+++ b/SS16-shil5377-LyubomirShoylev.tex
@@ -91,7 +91,7 @@ Our experiment consists of the setup presented in Figure \ref{fig:experim-setup}
     \caption{Diagram of the experimental setup. More info in the text of Section \ref{sec:experiment}.}\label{fig:experim-setup}
 \end{figure}
 
-To operate the apparatus and extract data, we use the software provided by the labs \emph{CASSY Lab 2}. The program has a built in database for the X-ray emission lines of most elements. It also allows for calculating a peak centre and fitting gaussian profiles with specified energy to find the intensity of emission lines. (\reminder{expand on applicability since x-ray lines are asymmetrical.})
+To operate the apparatus and extract data, we use the software provided by the labs \emph{CASSY Lab 2} (see \cite{cassylab2}). The program has a built in database for the X-ray emission lines of most elements. It also allows for calculating a peak centre and fitting gaussian profiles with specified energy to find the intensity of emission lines. (\reminder{expand on applicability since x-ray lines are asymmetrical.})
 
 Before we can do any work that has to do with determining energies or referring to energy values from a database, need to set the scaling of the measurement apparatus. We will do so with two of the labelled provided samples - for Fe and Ag. These cover a wide range of values in the bremsstrahlung spectrum, so they are a good way to set the scaling. The particular lines which we use to calibrate are the Fe \Kalpha with $E_\mathrm{Fe} = \qty{6.40}{keV}$ and the Ag \Kalpha with $E_\mathrm{Ag} = \qty{22.17}{keV}$. We also have to note the observational lower and upper limits, respectively \qtyrange{2}{4}{keV} and $\approx \qty{35}{keV}$.
 
