Fixed language errors in abstract and intro. Left to fix the mini-proj.

--- a/SS16-shil5377-LyubomirShoylev.tex
+++ b/SS16-shil5377-LyubomirShoylev.tex
@@ -8,7 +8,7 @@
 \usepackage{my-report}
 \usepackage[default-range=1-1]{lipsum}
 \newcommand{\reminder}[1]{\textcolor{red}{#1}}
-\newcommand{\rydberg}{\mathrm{R}}
+\newcommand{\rydberg}{R}
 \newcommand{\Kalpha}{$\mathrm{K}_\alpha$~}
 \newcommand{\Kbeta}{$\mathrm{K}_\beta$~}
 \newcommand{\Lalpha}{$\mathrm{L}_\alpha$~}
@@ -17,11 +17,11 @@
 \maketitle
 
 \begin{abstract}
-    In this experiment, we study the X-ray emission lines production and verify Moseley's Law by measuring the energy of emission lines series in several metals. Then, we use spectroscopy to report on the composition of different samples: two semiconductors, several unlabelled alloys and international metal coins provided in the laboratory. We give results for the mass ratios of the unlabelled alloys. We also find that most coins are made up of either Ni-Cu or Cu-Zn alloys and expand on the reasons behind this choice.
+    In this experiment, we study the production of X-ray emission lines and verify Moseley's Law by measuring the energy of emission line series in several metals. Then, we use spectroscopy to report on the composition of different samples: two semiconductors, several unlabelled alloys and international metal coins. We give results for the mass ratios of the unlabelled alloys. We also find that most coins are made up of either Ni-Cu or Cu-Zn alloys and expand on the reasons behind this choice.
 \end{abstract}
 
 \section{Introduction}
-X-rays are an important experimental tool and have been for more than a 100 years now ever since their discovery by Wilhelm R\"{o}ntgen. They are currently employed by both scientists, from scattering experiments in condensed matter to high-energy astrophysics, and citizens for medical scans etc. In this experiment, we first study the theoretical basis of X-ray production first developed by Moseley. We measure the energy of the \Kalpha and \Lalpha emission lines series of several samples of known elements with known atomic number $Z$ to verify Moseley's Law. Having established the uniqueness of X-ray emission lines for a given $Z$, we use it to study the composition of several samples provided to us in the laboratory by measuring their emission spectra when exposed to a continuous X-ray source. We begin by independently confirming the composition of two semiconductor samples observed in the non-mini-project part of the experiment. Then, we report on the composition of some unlabelled metal alloys and the relative mass ratios of the samples. Finally, we report on the composition of an array of international coins provided in the laboratory and expand more on the reasoning for the mainly Ni-Cu-Zn composition.
+X-rays are an important experimental tool and have been for more than a 100 years, ever since their discovery by Wilhelm R\"{o}ntgen. They are currently employed by both scientists, from scattering experiments in condensed matter to high-energy astrophysics, and citizens for various medical purposes and security scanners. In this experiment, we first study the theoretical basis of X-ray production, first developed by Moseley. We measure the energy of the \Kalpha and \Lalpha emission line series of several samples of known elements with known atomic number, $Z$, to verify Moseley's Law. Having established the uniqueness of X-ray emission lines for a given $Z$, we use it to study the composition of several samples provided to us in the laboratory by measuring their emission spectra when exposed to a continuous X-ray source. We begin by independently confirming the composition of two semiconductor samples observed in the non-mini-project part of the experiment. Then we report on the composition of several unlabelled metal alloys and the relative mass ratios of the samples. Finally, we report on the composition of an array of international coins and expand more on the reasoning for the mainly Ni-Cu-Zn composition.
 
 \section{Theory}
 We begin by introducing some of the background theory behind X-rays and their production.
