--- a/SS16-shil5377-LyubomirShoylev.tex
+++ b/SS16-shil5377-LyubomirShoylev.tex
@@ -21,21 +21,21 @@
 \end{abstract}
 
 \section{Introduction}
-X-rays are an important experimental tool and have been for more than a 100 years, ever since their discovery by Wilhelm R\"{o}ntgen. They are currently employed by both scientists, from scattering experiments in condensed matter to high-energy astrophysics, and citizens for various medical purposes and security scanners. In this experiment, we first study the theoretical basis of X-ray production, first developed by Moseley. We measure the energy of the \Kalpha and \Lalpha emission line series of several samples of known elements with known atomic number, $Z$, to verify Moseley's Law. Having established the uniqueness of X-ray emission lines for a given $Z$, we use it to study the composition of several samples provided to us in the laboratory by measuring their emission spectra when exposed to a continuous X-ray source. We begin by independently confirming the composition of two semiconductor samples observed in the non-mini-project part of the experiment. Then we report on the composition of several unlabelled metal alloys and the relative mass ratios of the samples. Finally, we report on the composition of an array of international coins and expand more on the reasoning for the mainly Ni-Cu-Zn composition.
+X-rays are an important experimental tool and have been for more than a 100 years, ever since their discovery by Wilhelm R\"{o}ntgen. They are currently employed by both scientists, from scattering experiments in condensed matter to high-energy astrophysics, and citizens for various medical purposes and security scanners. In this experiment, we first study the theoretical basis of X-ray production, first developed by Moseley. We measure the energy of the \Kalpha and \Lalpha emission line series of several samples of known elements with known atomic number, $Z$, to verify Moseley's Law. Having established the uniqueness of X-ray emission lines for a given $Z$, we use it to study the composition of several samples provided to us in the laboratory by measuring their emission spectra when exposed to a continuous X-ray source. We begin by independently confirming the composition of two semiconductor samples observed in the non-mini-project part of the experiment \reminder{--- remove this and fix non-MP part}. Then we report on the composition of several unlabelled metal alloys and the relative mass ratios of the samples. Finally, we report on the composition of an array of international coins and expand more on the reasoning for the mainly Ni-Cu-Zn composition.
 
 \section{Theory}
 We begin by introducing some of the background theory behind X-rays and their production.
 \subsection{X-ray atomic spectra}
-The emission spectra of atoms is due to energy transition of shell electrons from a higher energy level to a lower energy level. We are interested in X-rays specifically, which are due to transitions in the inner electron levels of high-$Z$ atoms. These are shielded from the outer electron layers and are mostly unaffected by the chemical structure of the sample i.e. by the surrounding atoms. Therefore, we can take an energy level of an electron to be $E_n = -\rydberg\left(Z\right) / n^2$ where $\rydberg \left(Z\right)= \rydberg_\infty \left(Z - b\right)^2$ is the modified Rydberg constant for a given $Z$, $b$ is some parameter depending on atom, and $\rydberg_\infty$ is the hydrogen Rydberg constant. Then, the energy of an emitted photon by a transition from level $n_\mathrm{i}$ to $n_\mathrm{f}$ is given by:
+The emission spectra of atoms is due to energy transitions of shell electrons from a higher- to a lower-energy level. We are interested in X-rays, specifically, which are due to transitions in the inner electron levels of high-$Z$ atoms. These are shielded from the outer electron layers and are mostly unaffected by the chemical structure of the sample i.e. by the surrounding atoms. Therefore, we can take an energy level of an electron to be $E_n = -\rydberg\left(Z\right) / n^2$ where $\rydberg \left(Z\right)= \rydberg_\infty \left(Z - b\right)^2$ is the modified Rydberg constant for a given $Z$, $b$ is an atom-dependent parameter, and $\rydberg_\infty$ is the hydrogen Rydberg constant. Then, the energy of an emitted photon by a transition from level $n_\mathrm{i}$ to $n_\mathrm{f}$ is given by:
 \begin{equation}\label{eqn:x-ray-energy}
     \varepsilon = \rydberg\left(Z\right) \left(\frac{1}{n_\mathrm{f}^2} - \frac{1}{n_\mathrm{i}^2}\right).
 \end{equation}
 We can rewrite this at fixed $n_\mathrm{i}$, $n_\mathrm{f}$ (i.e. for a given line) as:
 \begin{equation}
     \sqrt{\varepsilon} = m \times Z + C,
-\end{equation}  where $m$, $C$ are some constants. This relationship is known as `Moseley's Law'.
+\end{equation}  where $m$, $C$ are constants. This relationship is known as `Moseley's Law'.
 
-The name convention of the energy levels of low-$n$ in X-ray notation is described in Table \ref{tab:siegbahn-notation}. The energy difference between different L, M levels is not so big, so if we have a low resolution detector we usually observe e.g. only one \Kalpha line.
+The name convention of the low-$n$ energy levels in X-ray notation is given in Table \ref{tab:siegbahn-notation}. The energy difference between different L, M levels is not large, so if we have a low resolution detector we usually observe e.g. only one \Kalpha line.\reminder{quantify this plox.}
 \begin{table}[!htbp]
     \centering
     \begin{tabular}{@{}llll@{}}
@@ -55,7 +55,7 @@ The name convention of the energy levels of low-$n$ in X-ray notation is describ
 \end{table}
 
 \subsection{X-ray production}\label{subsec:x-ray-production}
-In practice, we produce X-rays by bombarding a sample of some material with high energy electrons or X-rays which removes one of the inner shell electrons from the sample atom. This produces a vacancy in the shell. The vacancy is filled by some electron of a higher $n$ orbit (see Figure \ref{fig:emission-diagram}), and the fall of potential energy of the electron is compensated by an emitted X-ray (ignoring higher order effects like the \emph{Auger effect}).
+In practice, we produce X-rays by bombarding a sample of some material with high energy electrons or X-rays which removes one of the inner shell electrons from the sample atom. This produces a vacancy in the shell. The vacancy is filled by an electron of a higher-$n$ orbit (see Figure \ref{fig:emission-diagram}), and the fall of potential energy of the electron is compensated by an emitted X-ray (ignoring higher order effects like the \emph{Auger effect}).
 
 \begin{figure}[!htbp]
     \centering
@@ -68,19 +68,22 @@ Usually, small laboratory X-ray tubes use an electron source. Because of that, w
     \varepsilon_\mathrm{max} = eV.
 \end{equation}
 
-Suppose we use one such continuous X-ray source for the production of X-rays form a sample. We will take the K-series as an example. To produce a vacancy, need an X-ray of energy $\varepsilon_\mathrm{in} = - E_1 = \rydberg(Z)$, which will be provided by a collision with an electron with maximum energy $\varepsilon_\mathrm{max}$ in the case of the X-ray source. The resultant energy of the emitted X-ray will be given by \eqref{eqn:x-ray-energy}. Take for example the K-L transition. Its energy will therefore be (ignoring fine-structure):
+Suppose we use one such continuous X-ray source for the production of X-rays from a sample. We will take the K-series as an example. To produce a vacancy, an X-ray of energy $\varepsilon_\mathrm{in} = - E_1 = \rydberg(Z)$ is needed, which will be provided by a collision with an electron with maximum energy $\varepsilon_\mathrm{max}$ in the case of the X-ray source. The resultant energy of the emitted X-ray will be given by Equation \eqref{eqn:x-ray-energy}. Take, for example, the K-L transition: its energy will therefore be (ignoring fine-structure):
 \begin{equation}\label{eqn:Kalpha-energy-out}
     \varepsilon_\mathrm{out} = \rydberg\left(Z\right) \left(1 - \frac{1}{2^2}\right).
 \end{equation}
-A process like this one, in which $\varepsilon_\mathrm{in} \neq \varepsilon_\mathrm{out}$, is called \emph{fluorescence}.
+A process like this, in which $\varepsilon_\mathrm{in} \neq \varepsilon_\mathrm{out}$, is called \emph{fluorescence}.
 
 \subsection{Composition analysis}\label{subsec:compos-analysis}
-As said above, the X-ray emission is relatively independent of the composition of the sample. We can use this fact to perform a composition analysis on a sample by exposing it to the continuous bremsstrahlung of a source; this will allow the different components to fluoresce. The signal will give us information not only \emph{which} elements are present (given that the source is high enough to allow fluorescence), but their relative contribution --- the intensity of the signal will depend only on the number density $n$. Suppose we measure the intensity of a two-metal alloy with the peaks in the \Kalpha line as $I_\mathrm{a}$ and $I_\mathrm{b}$.
+As previously stated, the X-ray emission is relatively independent of the composition of the sample. We can use this fact to perform a composition analysis on a sample by exposing it to the continuous bremsstrahlung of a source; this will allow the different components to fluoresce. The signal will give us information not only on \emph{which} elements are present (given that the source is high enough to allow fluorescence), but their relative contribution --- the intensity of the signal will depend only on the number density, $n$. Suppose we measure the intensity of a two-metal alloy with the peaks in the \Kalpha line as $I_\mathrm{a}$ and $I_\mathrm{b}$.
 This tells us that:
 \begin{equation}
     \frac{I_\mathrm{a}}{I_\mathrm{b}} = \frac{n_\mathrm{a}}{n_\mathrm{b}},
 \end{equation}
-where $n_\mathrm{a}$ and $n_\mathrm{b}$ are the number densities of materials a and b. From that, we could easily calculate percentage compositions for number densities or mass densities ($\rho = n \times (\text{molar mass})$).
+where $n_\mathrm{a}$ and $n_\mathrm{b}$ are the number densities of materials a and b. From that, we could easily calculate percentage compositions for number densities or mass densities:
+\begin{equation}
+    \rho = n \times \mu, \quad \mu = \text{molar mass}.
+\end{equation}
 
 \section{Experiment}\label{sec:experiment}
 Our experiment consists of the setup presented in Figure \ref{fig:experim-setup}. First, we have an X-ray source with a molybdenum anode, which produces some characteristic \Kalpha X-rays that can be used for diffraction experiments (see the first part of \cite{OxfPhys2010}) and some continuous bremsstrahlung (see Section \ref{subsec:x-ray-production} for more details). These X-rays are focused through a circular aperture towards a target sample. The incident X-rays excite inner shell electrons, and the targets emit mostly in the characteristic X-rays of K,L, and M series. We detect these via an energy spectrometer that is sensitive in the region of our experiment. The setup parameters are: tube voltage $V = \qty{35}{kV}$, emission current \qty{1}{A}, exposure time $t=\qty{100}{s}$. This, according to \eqref{eqn:bremss-energy-max} and \eqref{eqn:Kalpha-energy-out}, allows us to produce, for example, \Kalpha X-rays with energy up to \qty{26.25}{keV} from samples with atomic numbers up to at least $50$, ignoring contribution of $b$.
