Fixed language errors in Conclusions.

--- a/SS16-shil5377-LyubomirShoylev.tex
+++ b/SS16-shil5377-LyubomirShoylev.tex
@@ -271,11 +271,13 @@ Finally, these alloys are very practical for everyday use. Coins, in their daily
 \reminder{This is a potential direction to investigate. Main idea --- calculate the ``value'' of a coin via its weight+official composition to see if anything interesting appears (coins worth more than their value, similar value for all coins etc.)}
 
 \section{Conclusions}
-In this experiment, we first study the theoretical basis of X-ray production first developed by Moseley. We measure the energy of the \Kalpha and \Lalpha emission lines series of several samples of known elements with known atomic number $Z=\numrange{22}{40} \mathrm{and} \numrange{50}{82}$ respectively. We find that there exists a linear relationship between the square root of the energy and number $Z$ like predicted by Moseley's law. Having established the uniqueness of X-ray emission lines for a given $Z$, we use it to study the composition of several samples provided to us in the laboratory by measuring their emission spectra when exposed to the continuous X-ray source. For the semiconductors, we observe traces of In in sample X2 and traces of In and Sb, which confirms the independently derived results form the non-mini-project. We also note the observational limitations of our setup, since the dopant of X2 was not observed --- P has a \Kalpha of energy below the observational limit.
+In this experiment, we first study the theoretical basis of X-ray production first developed by Moseley. We measure the energy of the \Kalpha and \Lalpha emission lines series of several samples of known elements with known atomic number $Z=\numrange{22}{40}$ and $\numrange{50}{82}$, respectively. We find that there exists a linear relationship between the square root of the energy and number $Z$ as predicted by Moseley's law. Having established the uniqueness of X-ray emission lines for a given $Z$, we use it to study the composition of several samples by measuring their emission spectra when exposed to the continuous X-ray source. For the semiconductors, we observe traces of In in sample X2 and traces of In and Sb, which confirms the independently derived results form the non-mini-project \reminder{non-mini proj}. We also note the observational limitations of our setup, since the dopant of X2 was not observed --- P has a \Kalpha of energy below the observational limit.
 
-Then, we report on the composition of some unlabelled metal alloys and the relative mass ratios of the samples. We measure these by performing gaussian fits using the built-in capabilities of the acquisition software. We also go through some analysis to confirm our observations are self-consistent by comparing the ratios of \Kalpha/\Kbeta for the same elements in different samples.
+Then, we study various metal alloys of unknown composition and the relative mass ratios of these samples. We measure these by performing Gaussian fits using the built-in capabilities of the acquisition software \reminder{fix}. We also go through some analysis to confirm our observations are self-consistent by comparing the ratios of \Kalpha to \Kbeta for the same elements in different samples.
 
-Finally, we report on the composition of an array of international coins provided in the laboratory. We discover that most have signs of Ni,Cu, and Zn in their spectra predominantly. While it is difficult to exactly extract intensities of the lines since they overlap, we report on the presence of either element in the coins in addition to any other element seen in the spectra. We discuss some seemingly anomalous results, like the 1 Yen and 25c canadian coins, which turn out to be 100\% aluminium and Ni-Cu clad steel. We conclude with an explanation for the frequency of use of these three metals, as well as the need to produce steel-core coins.
+Finally, we report on the composition of an array of international coins. We discover that most have signs of Ni,Cu, and Zn in their spectra, predominantly. While it is difficult to exactly extract intensities of the lines since they overlap, we report on the presence of either element in the coins in addition to any other element seen in the spectra. We discuss some seemingly anomalous results, like the 1 Yen and 25c canadian coins, which turn out to be 100\% aluminium and Ni-Cu clad steel. We conclude with an explanation for the frequency of use of these three metals, as well as the need to produce steel-core coins.
+
+\reminder{future plans to improve: e.g. normalize with a plain bremsstrahlung to better fit values, esp if away from eachother.}
 
 \bibliographystyle{plain}
 % \renewcommand{\bibname}{#new-name} -- rename the title of bibliography chapter
