--- a/references.bib
+++ b/references.bib
@@ -24,8 +24,8 @@
 @Misc{cassylab2,
   author    = {{LD DIDACTIC GmbH}},
   note      = {Version 2.24.10378},
-  title     = {Cassy Lab 2},
-  year      = {2021},
+  title     = {{Cassy} {Lab} 2},
+  year      = {2010--2021},
   owner     = {LD DIDACTIC GmbH},
   timestamp = {2021},
   url       = {https://www.ld-didactic.de/en/products-solutions/data-logging-and-measuring-technology/cassy-software.html},
